tests/errors/semantic/blocking/ex3.py
# Missing type annotation. Pyccel needs arguments to be annotated with types to know which types are required in the translated code. See https://github.com/pyccel/pyccel/blob/devel/docs/quickstart.md#type-annotations for information on how to specify the type information.
# pylint: disable=missing-function-docstring, missing-module-docstring
def f(x):
    return x**2
